--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==2.0.11
 click==8.0.3
 colorama==0.4.4
 dash==2.1.0
+dash-auth==1.3.2
 dash-bootstrap-components==1.0.3
 dash-core-components==2.0.0
 dash-html-components==2.0.0
